# [package]
# name = "yaupl"
# version = "0.1.0"
# authors = ["Ben <benluelo@hotmail.com>"]
# edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# colored = "1.9"
# parse = { path = "../parse/" }
# rand = "0.7.3"
# paste = "1.0.1"

# [lib]
# name = "yaupl"
# path = "src/lib/lib.rs"
# proc-macro = true

# [[bin]]
# name = "yaupl"
# path = "src/bin/yaupl/bin.rs"

[workspace]
members = ["yaupl", "parse", "ast", "types"]

# , "eval"
